--- a/styles/style.css
+++ b/styles/style.css
@@ -179,6 +179,10 @@ nav a.current {
 .headerText {
   float: left;
   color: #FFFFFF;
+  height: 80vh;
+  margin-left: 9.375rem;
+  margin-right: 40vw;
+  max-width: 1000px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -186,15 +190,9 @@ nav a.current {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  margin: 9.375rem;
-  margin-right: 40vw;
-  max-width: 1000px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .headerText .tagline {
@@ -216,10 +214,13 @@ nav a.current {
 
 @media (max-width: 63.9375em) {
   .headerText {
-    margin: 5rem;
+    margin: 0rem 5rem;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+  }
+  .headerText .intro {
+    text-align: justify;
   }
 }
 
